# mattermost-tui

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  mattermost-tui.spec  pyproject.toml
.github/workflows/: binary-release.yml
mattermost_tui/: cli.py  tui_app.py  user_agent.py
mattermost_tui/api/: __init__.py  auth.py  channel_labels.py  client.py  errors.py  models.py
tests/: conftest.py  test_api_client.py  test_cli.py
